// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create strapi dev config 1`] = `
Array [
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "some-path",
        "app.gitlab.com/env": "some-slug",
        "app.gitlab.com/env.name": "some-name",
        "kapp.k14s.io/disable-default-label-scoping-rules": "",
        "kapp.k14s.io/disable-default-ownership-label-rules": "",
      },
      "labels": Object {
        "app": "hello",
        "application": "some-slug-some-project",
        "owner": "some-project",
        "team": "some-project",
      },
      "name": "hello",
      "namespace": "some-namespace",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "hello",
        },
      },
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "app.gitlab.com/app": "some-path",
            "app.gitlab.com/env": "some-slug",
            "app.gitlab.com/env.name": "some-name",
            "kapp.k14s.io/disable-default-label-scoping-rules": "",
            "kapp.k14s.io/disable-default-ownership-label-rules": "",
          },
          "labels": Object {
            "app": "hello",
            "application": "some-slug-some-project",
            "owner": "some-project",
            "team": "some-project",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "BACKOFFICE_URL",
                  "value": "https://strapi-some-slug-some-project.dev2.fabrique.social.gouv.fr",
                },
                Object {
                  "name": "DATABASE_CLIENT",
                  "value": "postgres",
                },
                Object {
                  "name": "DATABASE_NAME",
                  "value": "$(PGDATABASE)",
                },
                Object {
                  "name": "DATABASE_HOST",
                  "value": "$(PGHOST)",
                },
                Object {
                  "name": "DATABASE_PORT",
                  "value": "$(PGPORT)",
                },
                Object {
                  "name": "DATABASE_USERNAME",
                  "value": "$(PGUSER)",
                },
                Object {
                  "name": "DATABASE_PASSWORD",
                  "value": "$(PGPASSWORD)",
                },
                Object {
                  "name": "DATABASE_SSL",
                  "value": "true",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-user-shortsha",
                  },
                },
              ],
              "image": "/path/to/docker/image/hello:longsha",
              "livenessProbe": Object {
                "httpGet": Object {
                  "path": "/_health",
                  "port": "http",
                },
                "initialDelaySeconds": 30,
              },
              "name": "hello",
              "ports": Array [
                Object {
                  "containerPort": 1337,
                  "name": "http",
                },
              ],
              "readinessProbe": Object {
                "httpGet": Object {
                  "path": "/_health",
                  "port": "http",
                },
                "initialDelaySeconds": 30,
              },
              "resources": Object {
                "limits": Object {
                  "cpu": "1",
                  "memory": "1Gi",
                },
                "requests": Object {
                  "cpu": "300m",
                  "memory": "256Mi",
                },
              },
              "startupProbe": Object {
                "httpGet": Object {
                  "path": "/_health",
                  "port": "http",
                },
                "initialDelaySeconds": 30,
              },
              "volumeMounts": Array [
                Object {
                  "mountPath": "/app/public/uploads",
                  "name": "uploads",
                },
              ],
            },
          ],
          "initContainers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "WAIT_FOR_RETRIES",
                  "value": "24",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-user-shortsha",
                  },
                },
              ],
              "image": "ghcr.io/socialgouv/docker/wait-for-postgres:6.32.2",
              "imagePullPolicy": "Always",
              "name": "wait-for-postgres",
              "resources": Object {
                "limits": Object {
                  "cpu": "20m",
                  "memory": "32Mi",
                },
                "requests": Object {
                  "cpu": "5m",
                  "memory": "16Mi",
                },
              },
            },
          ],
          "volumes": Array [
            Object {
              "emptyDir": Object {},
              "name": "uploads",
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "some-path",
        "app.gitlab.com/env": "some-slug",
        "app.gitlab.com/env.name": "some-name",
        "kapp.k14s.io/disable-default-label-scoping-rules": "",
        "kapp.k14s.io/disable-default-ownership-label-rules": "",
      },
      "labels": Object {
        "app": "hello",
        "application": "some-slug-some-project",
        "owner": "some-project",
        "team": "some-project",
      },
      "name": "hello",
      "namespace": "some-namespace",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "name": "http",
          "port": 80,
          "targetPort": 1337,
        },
      ],
      "selector": Object {
        "app": "hello",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "some-path",
        "app.gitlab.com/env": "some-slug",
        "app.gitlab.com/env.name": "some-name",
        "kapp.k14s.io/disable-default-label-scoping-rules": "",
        "kapp.k14s.io/disable-default-ownership-label-rules": "",
        "kubernetes.io/ingress.class": "nginx",
      },
      "labels": Object {
        "app": "hello",
        "application": "some-slug-some-project",
        "owner": "some-project",
        "team": "some-project",
      },
      "name": "hello",
      "namespace": "some-namespace",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "strapi-some-slug-some-project.dev2.fabrique.social.gouv.fr",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "hello",
                    "port": Object {
                      "name": "http",
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "strapi-some-slug-some-project.dev2.fabrique.social.gouv.fr",
          ],
          "secretName": "wildcard-crt",
        },
      ],
    },
  },
]
`;

exports[`should create strapi prod config 1`] = `
Array [
  Object {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "some-path",
        "app.gitlab.com/env": "some-slug",
        "app.gitlab.com/env.name": "some-name",
        "kapp.k14s.io/disable-default-label-scoping-rules": "",
        "kapp.k14s.io/disable-default-ownership-label-rules": "",
      },
      "labels": Object {
        "app": "hello",
        "application": "some-project",
        "owner": "some-project",
        "team": "some-project",
      },
      "name": "hello",
      "namespace": "some-project",
    },
    "spec": Object {
      "replicas": 1,
      "selector": Object {
        "matchLabels": Object {
          "app": "hello",
        },
      },
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "app.gitlab.com/app": "some-path",
            "app.gitlab.com/env": "some-slug",
            "app.gitlab.com/env.name": "some-name",
            "kapp.k14s.io/disable-default-label-scoping-rules": "",
            "kapp.k14s.io/disable-default-ownership-label-rules": "",
          },
          "labels": Object {
            "app": "hello",
            "application": "some-project",
            "owner": "some-project",
            "team": "some-project",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "BACKOFFICE_URL",
                  "value": "https://strapi-some-project.dev2.fabrique.social.gouv.fr",
                },
                Object {
                  "name": "DATABASE_CLIENT",
                  "value": "postgres",
                },
                Object {
                  "name": "DATABASE_NAME",
                  "value": "$(PGDATABASE)",
                },
                Object {
                  "name": "DATABASE_HOST",
                  "value": "$(PGHOST)",
                },
                Object {
                  "name": "DATABASE_PORT",
                  "value": "$(PGPORT)",
                },
                Object {
                  "name": "DATABASE_USERNAME",
                  "value": "$(PGUSER)",
                },
                Object {
                  "name": "DATABASE_PASSWORD",
                  "value": "$(PGPASSWORD)",
                },
                Object {
                  "name": "DATABASE_SSL",
                  "value": "true",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-user",
                  },
                },
              ],
              "image": "/path/to/docker/image/hello:42",
              "livenessProbe": Object {
                "httpGet": Object {
                  "path": "/_health",
                  "port": "http",
                },
                "initialDelaySeconds": 30,
              },
              "name": "hello",
              "ports": Array [
                Object {
                  "containerPort": 1337,
                  "name": "http",
                },
              ],
              "readinessProbe": Object {
                "httpGet": Object {
                  "path": "/_health",
                  "port": "http",
                },
                "initialDelaySeconds": 30,
              },
              "resources": Object {
                "limits": Object {
                  "cpu": "1",
                  "memory": "1Gi",
                },
                "requests": Object {
                  "cpu": "300m",
                  "memory": "256Mi",
                },
              },
              "startupProbe": Object {
                "httpGet": Object {
                  "path": "/_health",
                  "port": "http",
                },
                "initialDelaySeconds": 30,
              },
              "volumeMounts": Array [
                Object {
                  "mountPath": "/app/public/uploads",
                  "name": "uploads",
                },
              ],
            },
          ],
          "initContainers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "WAIT_FOR_RETRIES",
                  "value": "24",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-user",
                  },
                },
              ],
              "image": "ghcr.io/socialgouv/docker/wait-for-postgres:6.32.2",
              "imagePullPolicy": "Always",
              "name": "wait-for-postgres",
              "resources": Object {
                "limits": Object {
                  "cpu": "20m",
                  "memory": "32Mi",
                },
                "requests": Object {
                  "cpu": "5m",
                  "memory": "16Mi",
                },
              },
            },
          ],
          "volumes": Array [
            Object {
              "name": "uploads",
              "persistentVolumeClaim": Object {
                "claimName": "uploads",
              },
            },
          ],
        },
      },
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "some-path",
        "app.gitlab.com/env": "some-slug",
        "app.gitlab.com/env.name": "some-name",
        "kapp.k14s.io/disable-default-label-scoping-rules": "",
        "kapp.k14s.io/disable-default-ownership-label-rules": "",
      },
      "labels": Object {
        "app": "hello",
        "application": "some-project",
        "owner": "some-project",
        "team": "some-project",
      },
      "name": "hello",
      "namespace": "some-project",
    },
    "spec": Object {
      "ports": Array [
        Object {
          "name": "http",
          "port": 80,
          "targetPort": 1337,
        },
      ],
      "selector": Object {
        "app": "hello",
      },
      "type": "ClusterIP",
    },
  },
  Object {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "some-path",
        "app.gitlab.com/env": "some-slug",
        "app.gitlab.com/env.name": "some-name",
        "certmanager.k8s.io/cluster-issuer": "letsencrypt-prod",
        "kapp.k14s.io/disable-default-label-scoping-rules": "",
        "kapp.k14s.io/disable-default-ownership-label-rules": "",
        "kubernetes.io/ingress.class": "nginx",
        "kubernetes.io/tls-acme": "true",
      },
      "labels": Object {
        "app": "hello",
        "application": "some-project",
        "owner": "some-project",
        "team": "some-project",
      },
      "name": "hello",
      "namespace": "some-project",
    },
    "spec": Object {
      "rules": Array [
        Object {
          "host": "strapi-some-project.dev2.fabrique.social.gouv.fr",
          "http": Object {
            "paths": Array [
              Object {
                "backend": Object {
                  "service": Object {
                    "name": "hello",
                    "port": Object {
                      "name": "http",
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": Array [
        Object {
          "hosts": Array [
            "strapi-some-project.dev2.fabrique.social.gouv.fr",
          ],
          "secretName": "hello-crt",
        },
      ],
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "some-path",
        "app.gitlab.com/env": "some-slug",
        "app.gitlab.com/env.name": "some-name",
      },
      "labels": Object {
        "application": "some-project",
        "owner": "some-project",
        "team": "some-project",
      },
      "name": "uploads",
      "namespace": "some-project",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "resources": Object {
        "requests": Object {
          "storage": "5Gi",
        },
      },
      "selector": Object {
        "matchLabels": Object {
          "usage": "some-slug-uploads",
        },
      },
      "storageClassName": "",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolume",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "some-path",
        "app.gitlab.com/env": "some-slug",
        "app.gitlab.com/env.name": "some-name",
      },
      "labels": Object {
        "application": "some-project",
        "owner": "some-project",
        "team": "some-project",
        "usage": "some-slug-uploads",
      },
      "name": "some-slug-uploads",
      "namespace": "some-project",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "azureFile": Object {
        "secretName": "azure-some-project-volume",
        "secretNamespace": "some-project",
        "shareName": "uploads",
      },
      "capacity": Object {
        "storage": "5Gi",
      },
      "persistentVolumeReclaimPolicy": "Delete",
      "storageClassName": "",
    },
  },
]
`;
